--- a/ThinkerBell/gradle/libs.versions.toml
+++ b/ThinkerBell/gradle/libs.versions.toml
@@ -22,6 +22,8 @@ retrofit = "2.11.0"
 firebaseMessaging = "24.0.0"
 workRuntimeKtx = "2.9.0"
 jetbrainsKotlinJvm = "1.9.0"
+hilt = "2.49"
+ksp = "1.9.24-1.0.20"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
@@ -46,10 +48,14 @@ logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", ver
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
 androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
+hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+googleKsp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
