--- a/.github/workflows/versioning-and-deployment.yml
+++ b/.github/workflows/versioning-and-deployment.yml
@@ -25,19 +25,19 @@ jobs:
         run: chmod +x ./ThinkerBell/gradlew
 
       - name: Create google-services.json
-        run: echo "$GOOGLE_SERVICES_JSON" > ./ThinkerBell/app/google-services.json
+        run: echo "$GOOGLE_SERVICES_JSON" > ./ThinkerBell/presentation/google-services.json
 
       - name: Create local.properties
         run: echo "$LOCAL_PROPERTIES_CONTENTS" > ./ThinkerBell/local.properties
 
       - name: Decode and save keystore
-        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > ./ThinkerBell/app/keystore.jks
+        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > ./ThinkerBell/presentation/keystore.jks
 
       - name: Verify keystore
         run: |
-          ls -alh ./ThinkerBell/app/
+          ls -alh ./ThinkerBell/presentation/
           echo "Checking JKS format..."
-          keytool -list -v -keystore ./ThinkerBell/app/keystore.jks -storetype JKS || echo "JKS format verification failed"
+          keytool -list -v -keystore ./ThinkerBell/presentation/keystore.jks -storetype JKS || echo "JKS format verification failed"
 
       - name: Build release APK
         run: |
@@ -50,4 +50,4 @@ jobs:
           appId: ${{ secrets.FIREBASE_APP_ID }}
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: Team-NeverLand
-          file: ./ThinkerBell/app/build/outputs/apk/release/ThinkerBell-release.apk
+          file: ./ThinkerBell/presentation/build/outputs/apk/release/ThinkerBell-release.apk
