--- a/.github/workflows/versioning-and-deployment.yml
+++ b/.github/workflows/versioning-and-deployment.yml
@@ -1,7 +1,7 @@
 name: Versioning, Build And Deployment to Firebase App Distribution
 on:
   push:
-    branches: [ feat/cicd-firebase ]
+    branches: [ develop ]
   workflow_dispatch:
 
 jobs:
