--- a/ThinkerBell/gradle/libs.versions.toml
+++ b/ThinkerBell/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ workRuntimeKtx = "2.9.0"
 jetbrainsKotlinJvm = "1.9.0"
 hilt = "2.52"
 ksp = "1.9.24-1.0.20"
+appUpdateKtx = "2.1.0"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
@@ -52,6 +53,7 @@ firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging
 androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+app-update-ktx = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "appUpdateKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
