--- a/ThinkerBell/presentation/src/main/AndroidManifest.xml
+++ b/ThinkerBell/presentation/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@drawable/ic_notification_thinkerbell"/>
     </application>
 
 </manifest>
